030-software/fluxcd/apps/adminer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: adminer
