030-software/fluxcd/apps/adminer/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer
  annotations:
    dashboard.${domain}/name: adminer
    dashboard.${domain}/url: https://adminer.${domain}
    dashboard.${domain}/icon: database
spec:
  hostnames:
  - adminer.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: adminer
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
